--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,9 +17,19 @@
             <label class="form-label" for="idadeInput">Idade:</label>
             <input class="form-control" type="text" name="idade" id="idadeInput">
             <br/>
+
+            <label class="form" for="vacinadoInput">Vacinado:</label>
+            
+            <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
+            <label class="btn btn-outline-success" for="success-outlined">Sim</label>
+
+            <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
+            <label class="btn btn-outline-danger" for="danger-outlined">Não</label>
+
+            <br/>
+            <br/>
             <input class="btn btn-primary form-control" type="submit" value="Adicionar Pessoa">
-            <ul class="lista-pessoas list-group list-group-flush">
-                
+            <ul class="lista-pessoas list-group list-group-flush">             
             </ul>
         </div>
     </form>
