--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,8 +17,10 @@
             <label class="form-label" for="idadeInput">Idade:</label>
             <input class="form-control" type="text" name="idade" id="idadeInput">
             <br/>
-            <label class="form-label" for="idadeInput">Vacinado(a):</label>
-            <input class="" type="checkbox" name="Vacinado" id="vacinadoInput">
+            <label class="form-label" for="vacinaInput">Vacinado(a):</label>
+            <input type="checkbox" value="true" name="vacinado" id="vacinado">Sim</input>
+
+            <!-- <input class="" type="checkbox" name="Vacinado" id="vacinadoInput"> -->
             <br/>
             <input class="btn btn-primary form-control" type="submit" value="Adicionar Pessoa">
             <ul class="lista-pessoas list-group list-group-flush">
