Add campos de email e senha a Pessoa

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,6 +17,17 @@
             <label class="form-label" for="idadeInput">Idade:</label>
             <input class="form-control" type="text" name="idade" id="idadeInput">
             <br/>
+
+
+            <label class="form-label" for="emailInput">Email:</label>
+            <input class="form-control" type="email" name="email" id="emailInput">
+            <br/>
+
+            <label class="form-label" for="senhaInput">Senha:</label>
+            <input class="form-control" type="password" name="senha" id="senhaInput">
+            <br/>
+
+
             <input class="btn btn-primary form-control" type="submit" value="Adicionar Pessoa">
             <ul class="lista-pessoas list-group list-group-flush">
                 
